# blocks_canvas

./: .gitignore  AGENTS.md  CONCURRENT_ANIMATIONS.md  CRASH_PROTECTION.md  Cargo.toml  Cargo.txt  LICENSE  MEMORY_MANAGEMENT.md  README.md  build_macos.sh  debug_animation.sh  debug_resource_stats.rs  debug_resources.pid  debug_resources.sh  test_advanced_memory.sh  test_concurrent_animations.sh  test_crash_protection.sh  test_memory.sh
src/: main.rs
