[package]
name = "ma_blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.29"
egui = { version = "0.29", features = ["serde"] }
gif = "0.14"
image = { version = "0.25.9", features = ["jpeg", "png", "avif", "default", "avif-native", "webp"] }
libavif = "0.14.0"
libavif-sys = "0.17.0"
egui_commonmark = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File Dialog
rfd = "0.15"

# Utilities
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
webp = "0.3"
