[package]
name = "ma_blocks"
version = "0.1.0"
edition = "2021"
description = "MA Blocks Application"
authors = ["Your Name <your.email@example.com>"]

# --- Bundle Configuration ---
[package.metadata.bundle]
name = "MA Blocks"
identifier = "com.mablocks.app"
icon = ["icon.png"]
version = "0.1.0"
copyright = "Copyright (c) 2024"
category = "Utility"
short_description = "MA Blocks Application"
long_description = """
MA Blocks - A graphical application built with egui.
"""

# Linux-specific settings
[package.metadata.bundle.linux]
generic = true

# --- Deb Package Configuration ---
[package.metadata.deb]
maintainer = "Your Name <your.email@example.com>"
copyright = "2024"
license-file = ["LICENSE", "0"]
extended-description = "MA Blocks - A graphical application built with egui."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ma_blocks", "usr/bin/", "755"],
]

[dependencies]
# GUI Framework
eframe = "0.29"
egui = { version = "0.29", features = ["serde"] }
gif = "0.14"
image = { version = "0.25.9", features = ["jpeg", "png", "avif", "default", "avif-native", "webp"] }
libavif-sys = "0.17.0"
egui_commonmark = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File Dialog
rfd = "0.15"

# Utilities
uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
webp = "0.3"
